--- a/public/style.css
+++ b/public/style.css
@@ -280,3 +280,10 @@ body{
     top: 15px;
     left: 5px;
 }
+.upvotecontainer{
+    display: flex;
+    flex-direction: row;
+}
+.numberofVotes{
+    font-weight: 500;
+}
