--- a/public/users/style.css
+++ b/public/users/style.css
@@ -283,3 +283,93 @@ body{
     font-size: 1.5em;
     border: none;
 }
+
+
+.commentwonerinfo{
+    display: flex;
+    flex-direction: row;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+}
+.addcommentuserinfo{
+    display: flex;
+    flex-direction: row;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+}
+.usercomment{
+    background-color: #DAE0E6;
+    border: solid;
+    border-width: 1px;
+    border-color: #a3a2a2;
+}
+.commentwonername{
+
+    padding-left: 5px;
+    padding-bottom: 5px;
+    font-weight: bold;
+
+}
+
+
+
+.commentwonerimage{
+    height: 50px;
+    width: 50px;
+    margin-left: 5px;
+}
+.addcommentimage{
+    height: 50px;
+    width: 50px;
+    margin-left: 5px;
+    border: solid;
+    border-width: 1px;
+    border-radius: 25px;
+    border-color: #a3a2a2;
+    position: relative;
+    top: 30px;
+}
+.commentbody{
+    padding: 20px;
+    background-color: #EAECEC;
+}
+.useraddcomment{
+    border: solid;
+    border-width: 1px;
+    border-color: #FF4500;
+}
+.addcomentbox{
+    width: 70%;
+    height: 100px;
+    margin-left: 60px;
+    margin-bottom: 5px;
+}
+
+.addcommentbtn{
+    margin-bottom: 10px;
+    background: #FF4500;
+	color: white;
+	border-style: solid;
+	border-color: #FF4500;
+    border-radius: 20px;
+	height: 80px;
+	width: 90px;
+	font: bold15px arial,sans-serif;
+	text-shadow: none;
+    font-weight: 800;
+    margin-top: 10px;
+    margin-left: 15px;
+}
+.addcommentusername{
+    position: relative;
+    top: 15px;
+    left: 5px;
+}
+
+.upvotecontainer{
+    display: flex;
+    flex-direction: row;
+}
+.numberofVotes{
+    font-weight: 500;
+}
