link all pages together

--- a/public/usermainpage/usermainpage.css
+++ b/public/usermainpage/usermainpage.css
@@ -76,21 +76,26 @@ body{
 
 
 }
-#notification{
+
+.profileicon{
     padding-left: 30px;
     padding-right: 30px;
     height: 20px;
     width: 20px;
     font-size: xx-large;
     margin-bottom: 25px;
+    text-decoration: none;
+    color: inherit; 
 }
-#trending{
+.homeicon{
     padding-left: 30px;
     padding-right: 30px;
     height: 20px;
     width: 20px;
     font-size: xx-large;
     margin-bottom: 25px;
+    text-decoration: none; 
+    color: inherit; 
 }
 #addpost{
     padding-left: 30px;
@@ -99,6 +104,8 @@ body{
     width: 20px;
     font-size: xx-large;
     margin-bottom: 25px;
+    text-decoration: none; 
+    color: inherit; 
 }
 .userinfo{
     display: flex;
