--- a/public/addpost/addpost.css
+++ b/public/addpost/addpost.css
@@ -61,30 +61,32 @@ body{
     align-items: center;
     justify-content: space-evenly;
 }
-#notification{
+
+
+.homeicon{
     padding-left: 30px;
     padding-right: 30px;
     height: 20px;
     width: 20px;
     font-size: xx-large;
     margin-bottom: 25px;
+    text-decoration: none; 
+    color: inherit; 
 }
-#trending{
+.profileicon{
     padding-left: 30px;
     padding-right: 30px;
     height: 20px;
     width: 20px;
     font-size: xx-large;
     margin-bottom: 25px;
+    text-decoration: none;
+    color: inherit; 
 }
-#addpost{
-    padding-left: 30px;
-    padding-right: 30px;
-    height: 20px;
-    width: 20px;
-    font-size: xx-large;
-    margin-bottom: 25px;
-}
+a {
+    text-decoration: none; 
+    color: inherit; 
+  }
 .userinfo{
     display: flex;
     flex-direction: row;
