--- a/public/users/style.css
+++ b/public/users/style.css
@@ -76,22 +76,32 @@ body{
 
 
 }
-#notification{
+
+.homeicon{
     padding-left: 30px;
     padding-right: 30px;
     height: 20px;
     width: 20px;
     font-size: xx-large;
     margin-bottom: 25px;
+    text-decoration: none; 
+    color: inherit; 
 }
-#trending{
+.profileicon{
     padding-left: 30px;
     padding-right: 30px;
     height: 20px;
     width: 20px;
     font-size: xx-large;
     margin-bottom: 25px;
+    text-decoration: none;
+    color: inherit; 
 }
+a {
+    text-decoration: none; 
+    color: inherit; 
+  }
+
 #addpost{
     padding-left: 30px;
     padding-right: 30px;
