--- a/public/login/login.css
+++ b/public/login/login.css
@@ -107,3 +107,10 @@ body {
     position: relative;
     right: 60px;
 }
+.massage{
+    position: relative;
+    right: 15px;
+    padding-bottom: 10px;
+    color: crimson;
+    font-size: small;
+}
