--- a/public/signup/signup.css
+++ b/public/signup/signup.css
@@ -129,3 +129,10 @@ body {
     position: relative;
     right: 55px;
 }
+.massage{
+    position: relative;
+    left: 5px;
+    padding-bottom: 10px;
+    color: crimson;
+    font-size: small;
+}
